<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocalPhotoReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="path">路劲: </string>
    <string name="displayname">名字: </string>
    <string name="type">类型: </string>
    <string name="size">大少: </string>
    <string name="width">宽度: </string>
    <string name="height">高度: </string>
    <string name="imagedescroption">ImageView Description</string>
    
    

</resources>
